# chorus

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
src/chorus/: __init__.py  cli.py  config.py  tmux_manager.py
zellij/: layout.kdl
